Adding capacity metric type to project. Does not yet work because only one base metric dimension is allowed.

--- a/dsgrid_project/project.json5
+++ b/dsgrid_project/project.json5
@@ -307,6 +307,15 @@
       //   type: "metric",
       // },
       {
+        class: "Capacity",
+        description: "dsgrid CONUS 2022 Equipment Capacities",
+        file: "dimensions/capacities.csv",
+        module: "dsgrid.dimension.standard",
+        name: "CONUS-2022-Equip-Capacities",
+        display_name: "Capacity",
+        type: "metric",
+      },
+      {
         class: 'ModelYear',
         description: 'Model year, 2010-2050',
         file: 'dimensions/model_years.csv',
