Updates to dataset metric units and mappings to project

--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dimension_mappings.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dimension_mappings.json5
@@ -16,7 +16,7 @@
       description: "All Electricity Metric to Electricity Unspecified Metric",
       dimension_type: "metric",
       file: "dimension_mappings/metric_to_metric.csv",
-      mapping_type: "one_to_one_explicit_multipliers",
+      mapping_type: "one_to_one",
     },
     {
       description: "EFS historical data to project scenarios",
