Exclude supplemental dimension for end_uses_by_sector

--- a/dsgrid_project/project.json5
+++ b/dsgrid_project/project.json5
@@ -504,6 +504,7 @@
         description: 'Provides selection of end uses by sector.',
         type: 'metric',
         filename: 'dimensions/subset/end_uses_by_sector.csv',
+        create_supplemental_dimensions: false,
         selectors: [
           {
             name: 'commercial_end_uses',
