--- a/tempo_project/project.json5
+++ b/tempo_project/project.json5
@@ -39,15 +39,14 @@
       },
       {
         class: 'Subsector',
-        description: 'dsgrid CONUS 2022 Subsectors',
-        file: 'dimensions/subsectors.csv',
-        module: 'dsgrid.dimension.standard',
-        name: 'CONUS-2022-Detailed-Subsectors',
-        display_name: 'Subsector',
         type: 'subsector',
+        name: "TEMPO Bin",
+        display_name: "Household and Vehicle Type",
+        file: "dataset/dimensions/bin.csv",
+        description: "TEMPO demographic/geographic/vehicle bins. This is a cross-join of the following supplemental dimensions: * Composition (Single Driver, Some Drivers Smaller, Some Drivers Larger) * Income (Low Income, Middle Income, High Income) * Urbanity (Rural, Small Town, Suburban, Second City, Urban) * Vehicle Size Class (Compact, Midsize, SUV, Pickup) * Tech (PHEV25/PHEV50/BEV100/BEV300) ",
       },
       {
-        'class': 'EnergyEndUse',
+        class: 'EnergyEndUse',
         description: 'dsgrid CONUS 2022 End Uses (all fuel types)',
         file: 'dimensions/enduses.csv',
         module: 'dsgrid.dimension.standard',
@@ -56,7 +55,7 @@
         type: 'metric',
       },
       {
-        "class": "ModelYear",
+        class: "ModelYear",
         type: "model_year",
         name: "TEMPO Model Year",
         display_name: "TEMPO Model Years",
@@ -64,7 +63,7 @@
         description: "TEMPO modeling years for CONUS 2022 project, 2018-2050",
       },
       {
-        "class": "Scenario",
+        class: "Scenario",
         type: "scenario",
         name: "Technology and Policy Scenario",
         display_name: "Scenario",
@@ -101,6 +100,188 @@
         type: 'weather_year',
       },
     ],
+    subset_dimensions: [
+      {
+        name: 'End Uses by Fuel Type',
+        display_name: 'end_uses_by_fuel_type',
+        description: 'Provides selection of end uses by fuel type.',
+        type: 'metric',
+        filename: 'dimensions/subset/end_uses_by_fuel_type.csv',
+        selectors: [
+          {
+            name: 'electricity_end_uses',
+            description: 'All Electric End Uses',
+            column_values: {'fuel_id': 'electricity', 'unit': 'MWh'},
+          },
+        ]
+      },
+      {
+        name: 'dsgrid CONUS 2022 Subsectors',
+        display_name: 'Subsector',
+        description: 'dsgrid CONUS 2022 Subsectors',
+        type: 'subsector',
+        filename: 'dimensions/subset/dsgrid_subsectors.csv',
+        selectors: [
+          {
+            name: 'bev_compact',
+            description: 'Battery electric compact personal vehicle',
+          },
+          {
+            name: 'bev_midsize',
+            description: 'Battery electric midsize personal vehicle',
+          },
+          {
+            name: 'bev_suv',
+            description: 'Battery electric sports utility personal vehicle',
+          },
+          {
+            name: 'bev_pickup',
+            description: 'Battery electric personal pickup truck',
+          },
+          {
+            name: 'phev_compact',
+            description: 'Plug-in hybrid electric compact personal vehicle',
+          },
+          {
+            name: 'phev_midsize',
+            description: 'Plug-in hybrid electric midsize personal vehicle',
+          },
+          {
+            name: 'phev_suv',
+            description: 'Plug-in hybrid electric sports utility personal vehicle',
+          },
+          {
+            name: 'phev_pickup',
+            description: 'Plug-in hybrid electric personal pickup truck',
+          },
+        ]
+      },
+      {
+        name: "Vehicle Class",
+        display_name: "vehicle_class",
+        description: "Light-duty passenger vehicle classes",
+        type: "subset",
+        filename: "dimensions/subset/vehicle_class.csv",
+        selectors: [
+          {
+            name: "Compact",
+            description: "Compact or smaller car",
+          },
+          {
+            name: "Midsize",
+            description: "Mid-size or larger car",
+          },
+          {
+            name: "SUV",
+            description: "Sport utility vehicle (crossovers included)",
+          },
+          {
+            name: "Pickup",
+            description: "Light duty pickup truck",
+          },
+        ],
+      },
+      {
+        name: "Household Size",
+        display_name: "household_size",
+        description: "Household size with a focus on number of drivers",
+        type: "subset",
+        filename: "dimensions/subset/household_size.csv",
+        selectors: [
+          {
+            name: "No_Drivers",
+            description: "No drivers",
+          },
+          {
+            name: "Single_Driver",
+            description: "One person, one driver",
+          },
+          {
+            name: "Some_Drivers_Smaller",
+            description: "Two persons, one or two drivers",
+          },
+          {
+            name: "Some_Drivers_Larger",
+            description: "Three or more persons, one or more drivers",
+          },
+        ],
+      },
+      {
+        name: "Household Income",
+        display_name: "household_income",
+        description: "Household income bins",
+        type: "subset",
+        filename: "dimensions/subset/household_income.csv",
+        selectors: [
+          {
+            name: "Low_Income",
+            description: "Annual income less than 50k USD",
+          },
+          {
+            name: "Middle_Income",
+            description: "Annual income between 50k USD and 125k USD",
+          },
+          {
+            name: "High_Income",
+            description: "Annual income greater than 125k USD",
+          },
+        ],
+      },
+      {
+        name: "Vehicle Technology",
+        display_name: "vehicle_technology",
+        description: "Electric vehicle technology by type (i.e., battery electric or plug-in hybrid) and range",
+        type: "subset",
+        filename: "dimensions/subset/vehicle_technology.csv",
+        selectors: [
+          {
+            name: "BEV_100",
+            description: "Battery-electric vehicle with 100-mile range",
+          },
+          {
+            name: "BEV_300",
+            description: "Battery-electric vehicle with 300-mile range",
+          },
+          {
+            name: "PHEV_25",
+            description: "Plug-in electric vehicle with 25 mile range",
+          },
+          {
+            name: "PHEV_50",
+            description: "Plug-in electric vehicle with 50 mile range",
+          },
+        ],
+      },
+      {
+        name: "urbanity",
+        display_name: "urbanity",
+        description: "Binned description of household locations focusing on population density",
+        type: "subset",
+        filename: "dimensions/subset/urbanity.csv",
+        selectors: [
+          {
+            name: "Urban",
+            description: "Dense neighborhoods that represent the central cities of most major metropolitan areas (above 4,150 persons/square mile)",
+          },
+          {
+            name: "Suburban",
+            description: "Moderate density neighborhoods that are not surrounded by urban or second city population centers (Estimated to be above 1,000 persons/square mile and not in an urban or 2nd city population center)",
+          },
+          {
+            name: "Second_City",
+            description: "Moderate density neighborhoods in population centers (above 1,000 and below 4,150 persons/square mile)",
+          },
+          {
+            name: "Small_Town",
+            description: "Isolated small towns or less developed areas on the exurban frontier",
+          },
+          {
+            name: "Rural",
+            description: "Small villages and rural hamlets surrounded by productive farmland or wide-open spaces (Estimated to be 210 persons/square mile and below)",
+          },
+        ],
+      },
+    ],
     supplemental_dimensions: [
       {
         class: 'State',
@@ -110,6 +291,11 @@
         name: 'US States L48',
         display_name: 'State',
         type: 'geography',
+        mapping: {
+          description: 'Maps US Counties 2020 L48 to State',
+          file: 'dimension_mappings/base_to_supplemental/lookup_county_to_state.csv',
+          mapping_type: 'many_to_one_aggregation',
+        },
       },
       {
         class: 'CensusRegion',
@@ -119,6 +305,11 @@
         name: 'US Census Regions',
         display_name: 'Census Region',
         type: 'geography',
+        mapping: {
+          description: 'Maps US Counties 2020 L48 to CensusRegion',
+          file: 'dimension_mappings/base_to_supplemental/lookup_county_to_censusregion.csv',
+          mapping_type: 'many_to_one_aggregation',
+        },
       },
       {
         class: 'CensusDivision',
@@ -128,6 +319,11 @@
         name: 'US Census Divisions',
         display_name: 'Census Division',
         type: 'geography',
+        mapping: {
+          description: 'Maps US Counties 2020 L48 to CensusDivision',
+          file: 'dimension_mappings/base_to_supplemental/lookup_county_to_censusdivision.csv',
+          mapping_type: 'many_to_one_aggregation',
+        },
       },
       {
         class: 'GeographyDimensionBaseModel',
@@ -137,6 +333,11 @@
         name: 'ReEDS PCA',
         display_name: 'ReEDS PCA',
         type: 'geography',
+        mapping: {
+          description: 'Maps US Counties 2020 L48 to ReEDS Power Control Areas',
+          file: 'dimension_mappings/base_to_supplemental/lookup_county_to_reeds_pca.csv',
+          mapping_type: 'many_to_one_aggregation',
+        },
       },
       {
         class: 'GeographyDimensionBaseModel',
@@ -146,228 +347,10 @@
         name: 'Contiguous United States',
         display_name: 'CONUS',
         type: 'geography',
-      },
-      {
-        class: 'EnergyEndUse',
-        description: 'All Electric End Uses Collapsed',
-        file: 'dimensions/supplemental/all_electric_enduses_collapsed.csv',
-        module: 'dsgrid.dimension.standard',
-        name: 'all-electric-end-uses-collapsed',
-        display_name: 'Electricity Collapsed',
-        type: 'metric',
-      },
-      {
-        class: 'EnergyEndUse',
-        description: 'Transportation End Uses Collapsed',
-        file: 'dimensions/supplemental/transportation_end_uses_collapsed.csv',
-        module: 'dsgrid.dimension.standard',
-        name: 'transportation-end-uses-collapsed',
-        display_name: 'Transportation End Uses Collapsed',
-        type: 'metric',
-      },
-      {
-        class: 'EnergyEndUse',
-        description: 'All Electric End Uses',
-        file: 'dimensions/supplemental/electric_end_uses.csv',
-        module: 'dsgrid.dimension.standard',
-        name: 'all-electric-end-uses',
-        display_name: 'Electricity',
-        type: 'metric',
-      },
-      {
-        class: 'EnergyEndUse',
-        description: 'Transportation End Uses',
-        file: 'dimensions/supplemental/transportation_end_uses.csv',
-        module: 'dsgrid.dimension.standard',
-        name: 'transportation-end-uses',
-        display_name: 'Transportation End Uses',
-        type: 'metric',
-      },
-      {
-        class: 'SectorDimensionBaseModel',
-        description: 'Transportation Sectors',
-        file: 'dimensions/supplemental/transportation_sectors.csv',
-        module: 'dsgrid.dimension.base_models',
-        name: 'Transportation Sectors',
-        display_name: 'Transportation Sectors',
-        type: 'sector',
-      },
-      {
-        class: 'SubsectorDimensionBaseModel',
-        description: 'Subsectors by sector collapsed',
-        file: 'dimensions/supplemental/subsectors_by_sector.csv',
-        module: 'dsgrid.dimension.base_models',
-        name: 'Subsectors by Sector Collapsed',
-        display_name: 'Subsector by Sector Collapsed',
-        type: 'subsector',
-      },
-      {
-        class: 'SubsectorDimensionBaseModel',
-        description: 'Transportation Subsectors',
-        file: 'dimensions/supplemental/transportation_subsectors.csv',
-        module: 'dsgrid.dimension.base_models',
-        name: 'Transportation Subsectors',
-        display_name: 'Transportation Subsectors',
-        type: 'subsector',
-      },
-    ],
-  },
-  dimension_mappings: {
-    base_to_supplemental: [
-      {
-        description: 'Maps US Counties 2020 L48 to CensusRegion',
-        file: 'dimension_mappings/base_to_supplemental/lookup_county_to_censusregion.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          name: 'US Counties 2020 L48',
-          type: 'geography',
-        },
-        to_dimension: {
-          name: 'US Census Regions',
-          type: 'geography',
-        },
-      },
-      {
-        description: 'Maps US Counties 2020 L48 to CensusDivision',
-        file: 'dimension_mappings/base_to_supplemental/lookup_county_to_censusdivision.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          type: 'geography',
-          name: 'US Counties 2020 L48',
-        },
-        to_dimension: {
-          name: 'US Census Divisions',
-          type: 'geography',
-        },
-      },
-      {
-        description: 'Maps US Counties 2020 L48 to State',
-        file: 'dimension_mappings/base_to_supplemental/lookup_county_to_state.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          name: 'US Counties 2020 L48',
-          type: 'geography',
-        },
-        to_dimension: {
-          name: 'US States L48',
-          type: 'geography',
-        },
-      },
-      {
-        description: 'Maps US Counties 2020 L48 to ReEDS Power Control Areas',
-        file: 'dimension_mappings/base_to_supplemental/lookup_county_to_reeds_pca.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          name: 'US Counties 2020 L48',
-          type: 'geography',
-        },
-        to_dimension: {
-          name: 'ReEDS PCA',
-          type: 'geography',
-        },
-      },
-      {
-        description: 'Maps US Counties 2020 L48 to CONUS',
-        file: 'dimension_mappings/base_to_supplemental/lookup_county_to_conus.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          name: 'US Counties 2020 L48',
-          type: 'geography',
-        },
-        to_dimension: {
-          name: 'Contiguous United States',
-          type: 'geography',
-        },
-      },      
-      {
-        description: 'Aggregation map for all dsgrid CONUS 2022 electric end uses',
-        file: 'dimension_mappings/base_to_supplemental/lookup_enduses_to_all_electric_enduses.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          name: 'CONUS-2022-Detailed-End-Uses',
-          type: 'metric',
-        },
-        to_dimension: {
-          name: 'all-electric-end-uses-collapsed',
-          type: 'metric',
-        },
-      },
-      {
-        description: 'No-op aggregation map for all dsgrid CONUS 2022 electric end uses',
-        file: 'dimension_mappings/base_to_supplemental/electric_end_uses_noop.csv',
-        mapping_type: 'one_to_one',
-        from_dimension: {
-          name: 'CONUS-2022-Detailed-End-Uses',
-          type: 'metric',
-        },
-        to_dimension: {
-          name: 'all-electric-end-uses',
-          type: 'metric',
-        },
-      },
-      {
-        description: 'Selector for aggregating all dsgrid CONUS 2022 transportation end uses',
-        file: 'dimension_mappings/base_to_supplemental/lookup_end_uses_to_transportation_end_uses.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          name: 'CONUS-2022-Detailed-End-Uses',
-          type: 'metric',
-        },
-        to_dimension: {
-          name: 'transportation-end-uses-collapsed',
-          type: 'metric',
-        },
-      },
-      {
-        description: 'Selector for all dsgrid CONUS 2022 transportation end uses',
-        file: 'dimension_mappings/base_to_supplemental/transportation_end_uses_noop.csv',
-        mapping_type: 'one_to_one',
-        from_dimension: {
-          name: 'CONUS-2022-Detailed-End-Uses',
-          type: 'metric',
-        },
-        to_dimension: {
-          name: 'transportation-end-uses',
-          type: 'metric',
-        },
-      },
-      {
-        description: 'Selector for individual dsgrid CONUS 2022 transportation sectors',
-        file: 'dimension_mappings/base_to_supplemental/transportation_sectors_noop.csv',
-        mapping_type: 'one_to_one',
-        from_dimension: {
-          name: 'Sectors - Com-Res-Ind-Trans',
-          type: 'sector',
-        },
-        to_dimension: {
-          name: 'Transportation Sectors',
-          type: 'sector',
-        },
-      },
-      {
-        description: 'Selector for aggregating all dsgrid CONUS 2022 subsectors',
-        file: 'dimension_mappings/base_to_supplemental/lookup_subsectors_by_sector.csv',
-        mapping_type: 'many_to_one_aggregation',
-        from_dimension: {
-          name: 'CONUS-2022-Detailed-Subsectors',
-          type: 'subsector',
-        },
-        to_dimension: {
-          name: 'Subsectors by Sector Collapsed',
-          type: 'subsector',
-        },
-      },
-      {
-        description: 'Selector for individual dsgrid CONUS 2022 transportation subsectors',
-        file: 'dimension_mappings/base_to_supplemental/transportation_subsectors_noop.csv',
-        mapping_type: 'one_to_one',
-        from_dimension: {
-          name: 'CONUS-2022-Detailed-Subsectors',
-          type: 'subsector',
-        },
-        to_dimension: {
-          name: 'Transportation Subsectors',
-          type: 'subsector',
+        mapping: {
+          description: 'Maps US Counties 2020 L48 to CONUS',
+          file: 'dimension_mappings/base_to_supplemental/lookup_county_to_conus.csv',
+          mapping_type: 'many_to_one_aggregation',
         },
       },
     ],
