--- a/dsgrid_project/datasets/modeled/tempo/dataset.json5
+++ b/dsgrid_project/datasets/modeled/tempo/dataset.json5
@@ -25,14 +25,17 @@
     "reference",
     "tempo",
   ],
-  data_schema_type: "standard",
   trivial_dimensions: [
     "sector",
     "weather_year",
   ],
   use_project_geography_time_zone: true,
   data_schema: {
-    load_data_column_dimension: "metric",
+    table_format: {
+      format_type: "pivoted",
+      pivoted_dimension_type: "metric",
+    },
+    data_schema_type: "standard",
   },
   dimensions: [
     {
