--- a/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.json5
+++ b/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.json5
@@ -3,7 +3,6 @@
   data_source: 'EIA 861',
   dataset_type: 'historical',
   sector_description: '',
-  data_schema_type: 'one_table',
   description: 'EIA 861 Utility Customer Sales (MWh) by State by Sector by Year for 2010-2020. This yearly 2010-2020 data was collected from EIA and processed by NREL dsgrid team. The Sales_Ult_Cust_<year> dataset was processed to get total sales (MWh) to customers by sector (com, res, ind, trans). The original data is utility-state, but for this dataset, we took the state sums. Furnished without Charge sales from the Operational_Data_{year} table were added to the commercial sector. Data processing scripts can be found in the dsgrid-Standard-Scenarios project repository under dsgrid-project/historical/eia_861_annual_energy_use_state_sector/scripts.',
   origin_creator: 'Meghan Mooney',
   origin_organization: 'EIA',
@@ -20,9 +19,13 @@
   data_classification: 'low',
   tags: ['historical', 'eia861', 'sales'],
   trivial_dimensions: ['subsector', 'scenario'],
-  data_schema: {
-    load_data_column_dimension: 'metric',
-  },
+    data_schema: {
+      table_format: {
+        format_type: "pivoted",
+        pivoted_dimension_type: "metric",
+      },
+      data_schema_type: "one_table",
+    },
   dimensions: [
     {
       // this is different than the project supplemental state dimension (it includes AK and HI)
