--- a/dsgrid_project/datasets/modeled/aeo2021_reference/industrial/Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/industrial/Growth_Factors/dataset.json5
@@ -29,12 +29,15 @@
         "model_year",
     ],
     data_schema: {
-        load_data_column_dimension: "metric",
-        data_schema_type: "one_table",
+      table_format: {
+        format_type: "pivoted",
+        pivoted_dimension_type: "metric",
+      },
+      data_schema_type: "one_table",
     },
     dataset_qualifier_metadata: {
         growth_rate_type: "exponential_annual",
-        dataset_qualifier: "growth_rate",
+        dataset_qualifier_type: "growth_rate",
     },
     dimensions: [
         {
