--- a/dsgrid_project/datasets/modeled/aeo2021_reference/residential/End_Use_Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/residential/End_Use_Growth_Factors/dataset.json5
@@ -28,13 +28,16 @@
     "weather_year",
     "model_year",
   ],
-  data_schema: {
-    load_data_column_dimension: "metric",
-    data_schema_type: "one_table",
-  },
+    data_schema: {
+      table_format: {
+        format_type: "pivoted",
+        pivoted_dimension_type: "metric",
+      },
+      data_schema_type: "one_table",
+    },
   dataset_qualifier_metadata: {
     growth_rate_type: "exponential_annual",
-    dataset_qualifier: "growth_rate",
+    dataset_qualifier_type: "growth_rate",
   },
   dimensions: [
     {
