--- a/dsgrid_project/datasets/modeled/resstock/dataset.json5
+++ b/dsgrid_project/datasets/modeled/resstock/dataset.json5
@@ -23,7 +23,6 @@
     "dsgrid_v0.2.0",
     "standard_scenarios",
   ],
-  data_schema_type: "standard",
   trivial_dimensions: [
     "sector",
     "weather_year",
@@ -31,7 +30,11 @@
     "scenario",
   ],
   data_schema: {
-    load_data_column_dimension: "metric",
+    table_format: {
+      format_type: "pivoted",
+      pivoted_dimension_type: "metric",
+    },
+    data_schema_type: "standard",
   },
   dimensions: [
     {
