--- a/dsgrid_project/project.json5
+++ b/dsgrid_project/project.json5
@@ -451,6 +451,7 @@
             start: '2012-01-01 00:00:00',
             end: '2012-12-31 23:00:00',
           },
+        wrap_time_allowed: true,
         ],
       },
       {
